Rename folder with courses and learning material and edit code to retrieve them

--- a/fakeDB/retrieve_courses.ipynb
+++ b/fakeDB/retrieve_courses.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# select file with courses and clean up lines where courses title are stored\n",
     "legit = 'abcdefghijklmnopqrstuvwxyz '\n",
-    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/sources/'\n",
+    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/sources/[RAW]courses_and_lm/'\n",
     "courseList = list()"
    ]
   },
@@ -1970,7 +1970,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('coursesOK.txt', 'w') as courses:\n",
+    "with open('/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/sources/coursesOK.txt', 'w') as courses:\n",
     "    for course in courseCategoryDict['course']:\n",
     "        courses.write(course + '\\n')"
    ]
@@ -1990,7 +1990,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('courseCategoriesOK.txt', 'w') as courseCategories:\n",
+    "with open('/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/sources/courseCategoriesOK.txt', 'w') as courseCategories:\n",
     "    for courseCategory in courseCategoryDict['category']:\n",
     "        courseCategories.write(courseCategory + '\\n')"
    ]
