--- a/fakeDB/retrieve_lm.ipynb
+++ b/fakeDB/retrieve_lm.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "path = '/Users/mau/github/da_dbB_project/fakeDB/sources/learning_material/'"
+    "\n",
+    "path = '/Users/mau/OneDrive - unime.it/Learning/CdL Informatica/Anno II - Database/Module B/project/sources/[RAW]courses_and_lm'"
    ]
   },
   {
@@ -103,7 +104,7 @@
    "source": [
     "print('List of files with learning materials:\\n') \n",
     "for file in os.listdir(path):\n",
-    "    if file != '.DS_Store':\n",
+    "    if file != '.DS_Store' and file != 'courses.rtf':\n",
     "        print(file)"
    ]
   },
@@ -5835,7 +5836,7 @@
    "source": [
     "# explore the content file by file (each file is separated from the others by ******************************\n",
     "for file in os.listdir(path):\n",
-    "    if file != '.DS_Store':\n",
+    "    if file != '.DS_Store' and file != 'courses.rtf':\n",
     "        with open(path + file, encoding = 'UTF-8') as lmFile:\n",
     "            print('---', file, '---')\n",
     "            print(lmFile.read())\n",
@@ -16586,7 +16587,7 @@
    "source": [
     "# explore the content of the files line by line\n",
     "for file in os.listdir(path):\n",
-    "    if file != '.DS_Store':\n",
+    "    if file != '.DS_Store' and file != 'courses.rtf':\n",
     "        with open(path + file) as lmFile:\n",
     "            for line in lmFile:\n",
     "                print(line)"
