--- a/fakeDB/retrieve_lm_test.ipynb
+++ b/fakeDB/retrieve_lm_test.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "path = '/Users/mau/github/da_dbB_project/fakeDB/sources/learning_material/'"
+    "path = '/Users/mau/github/da_dbB_project/fakeDB/sources/[RAW]courses_and_lm/'"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "source": [
     "print('List of files with learning materials:\\n') \n",
     "for file in os.listdir(path):\n",
-    "    if file != '.DS_Store':\n",
+    "    if file != '.DS_Store' and file != 'courses.rtf':\n",
     "        print(file)"
    ]
   },
