Update mysql and mongodb drafts

--- a/project_development/mongodb.ipynb
+++ b/project_development/mongodb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9cb8fe4",
+   "id": "28139080",
    "metadata": {},
    "source": [
     "<center>\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe0f28d",
+   "id": "a46d3ac1",
    "metadata": {},
    "source": [
     "<h3>Preliminary operations: import csv files into MongoDB (<code>mongoimport</code> tool)</h3>"
@@ -20,20 +20,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cffdf75",
+   "id": "970d266c",
    "metadata": {},
    "source": [
-    "The here are basically two ways to import a csv file into a MongoDB instance. One is to use <a href = 'https://www.mongodb.com/docs/compass/master/import-export/'><i>MongoDB Compass</i></a>, an intuitive and comprehensive Graphical User Interface for MongoDB. The other is to use a MongoDB Database tool, i.e. <a href = 'https://www.mongodb.com/docs/database-tools/mongoimport/#mongodb-binary-bin.mongoimport'><i>mongoimport</i></a>. The use of a GUI makes the import extremely user-friendly, although I prefer to implement a method that uses a standard command line API to import the data into the database. The <code>mongoimport</code> tool must be run from the system command line, not from the mongo shell, hence its execution must include host and authentication information to connect to the DBMS and interact with it.\n",
+    "There are basically two ways to import a csv file into a MongoDB instance. One is to use <a href = 'https://www.mongodb.com/docs/compass/master/import-export/'><i>MongoDB Compass</i></a>, an intuitive and comprehensive Graphical User Interface for MongoDB. The other is to use a MongoDB Database tool, i.e. <a href = 'https://www.mongodb.com/docs/database-tools/mongoimport/#mongodb-binary-bin.mongoimport'><i>mongoimport</i></a>. The use of a GUI makes the import extremely user-friendly, although I prefer to implement a method that uses a standard command line API to import the data into the database. The <code>mongoimport</code> tool must be run from the system command line, not from the mongo shell, hence its execution must include host and authentication information to connect to the DBMS and interact with it.\n",
     "<br>\n",
-    "<h4>Syntax</h4><br>\n",
+    "<h4>\n",
+    "Syntax\n",
+    "</h4><br>\n",
     "The <code>mongoimport</code> tool must be run from the system command line, not from within the MongoDB shell. Its syntax requires that we provide information for connecting to the desired MongoDB server (although by default the host name and port are standard: <i>localhost:27017</i>), together with authentication details, database name and file details.\n",
     "Connection and authentication details can be provided through a <i>connection string</i> or via options. I opt for the latter method because it is more explicit and readable, in my opinion.\n",
     "<br>\n",
     "<code>\n",
     "    mongoimport [options] [connection-string] [file]\n",
     "</code>\n",
-    "<br>\n",
-    "<h4>Options</h4><br>\n",
+    "<h4>\n",
+    "Options\n",
+    "</h4><br>\n",
     "- <b>host name</b><br>\n",
     "The <code>--host</code> option allows us to indicate the hostname and port of the MongoDB instance we want to connect to. As previously specified, these need not be declared if the default ones (<i>localhost:27017</i>) are ok:\n",
     "<br>\n",
@@ -66,7 +69,9 @@
     "<br>\n",
     "When the file is imported, <code>mongoimport</code> translates each row into a document, assigning to each value a key equal to the value of the corresponding column of the first row of the csv file. Since a csv file is flat, the resulting schema of the documents in the collection will be homogeneous.\n",
     "<br>\n",
-    "<h4>Notes when running MongoDB from a Docker container:</h4><br>\n",
+    "<h4>\n",
+    "Notes when running MongoDB from a Docker container\n",
+    "</h4><br>\n",
     "In loading the csv file from the local machine, we must take into account the usual feature of Docker virual environments. They come with a file system of their own, so a DBMS run from within a container has access to this file system, not to the local machine file system. Hence, the csv file must be imported into the container via the usual <code>docker cp</code> command.\n",
     "<br>\n",
     "<code>\n",
@@ -86,14 +91,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8e74da0",
+   "id": "f88a4fbe",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cca6abb6",
+   "id": "a3ecb38b",
    "metadata": {},
    "source": [
     "<h3>Python - MongoDB interaction</h3>"
@@ -101,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636c5186",
+   "id": "4569224e",
    "metadata": {},
    "source": [
     "Interaction between a Python API and a MongoDB DBMS requires the installation of a specific driver. It is convenient to use the driver officially developed by the MongoDB team, i.e. <i>PyMongo</i>. A list of MongoDB driver for various programming languages is provided in the <a href = 'https://www.mongodb.com/docs/drivers/'>MongoDB Drivers</a> web page, together with the ones dedicated to Python (<a href = 'https://www.mongodb.com/docs/drivers/pymongo/'><i>PyMongo</i></a> and <a href = 'https://www.mongodb.com/docs/drivers/motor/'><i>Motor</i></a>)<br>After having installed the driver, it can be imported into a Python environment the usual way."
@@ -110,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "337d66be",
+   "id": "e41487af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,118 +123,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "23c33748",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ASCENDING',\n",
-       " 'ContextManager',\n",
-       " 'CursorType',\n",
-       " 'DESCENDING',\n",
-       " 'DeleteMany',\n",
-       " 'DeleteOne',\n",
-       " 'GEO2D',\n",
-       " 'GEOSPHERE',\n",
-       " 'HASHED',\n",
-       " 'IndexModel',\n",
-       " 'InsertOne',\n",
-       " 'MAX_SUPPORTED_WIRE_VERSION',\n",
-       " 'MIN_SUPPORTED_WIRE_VERSION',\n",
-       " 'MongoClient',\n",
-       " 'Optional',\n",
-       " 'ReadPreference',\n",
-       " 'ReplaceOne',\n",
-       " 'ReturnDocument',\n",
-       " 'TEXT',\n",
-       " 'UpdateMany',\n",
-       " 'UpdateOne',\n",
-       " 'WriteConcern',\n",
-       " '__all__',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__path__',\n",
-       " '__spec__',\n",
-       " '__version__',\n",
-       " '_cmessage',\n",
-       " '_csot',\n",
-       " '_version',\n",
-       " 'aggregation',\n",
-       " 'auth',\n",
-       " 'auth_aws',\n",
-       " 'auth_oidc',\n",
-       " 'bulk',\n",
-       " 'change_stream',\n",
-       " 'client_options',\n",
-       " 'client_session',\n",
-       " 'collation',\n",
-       " 'collection',\n",
-       " 'command_cursor',\n",
-       " 'common',\n",
-       " 'compression_support',\n",
-       " 'cursor',\n",
-       " 'database',\n",
-       " 'driver_info',\n",
-       " 'errors',\n",
-       " 'get_version_string',\n",
-       " 'has_c',\n",
-       " 'hello',\n",
-       " 'helpers',\n",
-       " 'lock',\n",
-       " 'max_staleness_selectors',\n",
-       " 'message',\n",
-       " 'mongo_client',\n",
-       " 'monitor',\n",
-       " 'monitoring',\n",
-       " 'network',\n",
-       " 'operations',\n",
-       " 'periodic_executor',\n",
-       " 'pool',\n",
-       " 'read_concern',\n",
-       " 'read_preferences',\n",
-       " 'response',\n",
-       " 'results',\n",
-       " 'saslprep',\n",
-       " 'server',\n",
-       " 'server_api',\n",
-       " 'server_description',\n",
-       " 'server_selectors',\n",
-       " 'server_type',\n",
-       " 'settings',\n",
-       " 'socket_checker',\n",
-       " 'srv_resolver',\n",
-       " 'ssl_context',\n",
-       " 'ssl_support',\n",
-       " 'timeout',\n",
-       " 'topology',\n",
-       " 'topology_description',\n",
-       " 'typings',\n",
-       " 'uri_parser',\n",
-       " 'version',\n",
-       " 'version_tuple',\n",
-       " 'write_concern']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(pymongo)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "23c15711",
+   "id": "9ea8c056",
    "metadata": {},
    "source": [
     "<h4>\n",
@@ -241,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "685aab26",
+   "id": "4527a831",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "912332f9",
+   "id": "2471725e",
    "metadata": {},
    "source": [
     "<h4>\n",
@@ -262,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "8f3d6db8",
+   "id": "f79b76c3",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ac415311",
+   "id": "ca89c5e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ef707c7",
+   "id": "6b8f2311",
    "metadata": {},
    "source": [
     "<h4>\n",
@@ -316,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "711b7d03",
+   "id": "2e8a850c",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "4345b624",
+   "id": "be1bf298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd038229",
+   "id": "b58206e7",
    "metadata": {},
    "source": [
     "<h4>\n",
@@ -362,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "2dcc1e80",
+   "id": "8d855e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "a02ea9aa",
+   "id": "eabff6a4",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207ced12",
+   "id": "5061f242",
    "metadata": {},
    "source": [
     "Find one correspondence to the query."
@@ -1282,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "05b1a573",
+   "id": "3a90f2b6",
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72c8794",
+   "id": "961b5e66",
    "metadata": {},
    "source": [
     "Create cursor object with the find method and iterate over the results of the object."
@@ -1330,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c0b18c85",
+   "id": "4e5e608f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0818bfed",
+   "id": "76dcb233",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "56561396",
+   "id": "9ecbd23a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7a038640",
+   "id": "46d11570",
    "metadata": {},
    "outputs": [
     {
@@ -2279,9 +2174,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c62efba6",
+   "metadata": {},
+   "source": [
+    "<h4>\n",
+    "Measuring and displaying the query execution time\n",
+    "</h4><br>\n",
+    "To display the query execution time we can use the Python <a href = 'https://docs.python.org/3/library/time.html'><i>time</i></a> module and its <code>time</code> function. The function returns the system time at a floating point precision, so the query execution time can be measured as a large number of fractions of a second. It is sufficient to assign the time before the query execution to a variable and the time after the query execution to another variable. The difference between the two variables will measure the query execution. Obviously, the time for the Python API to connect to the MongoDB server and the time to return to the Python API after the query execution will be summed up to the query execution time at the DBMS level."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "08fad792",
+   "id": "15c0b8f3",
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3b37076",
+   "id": "3a6250d7",
    "metadata": {},
    "outputs": [],
    "source": []
