--- a/project_development/mysql.ipynb
+++ b/project_development/mysql.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d287ed",
+   "id": "60a6a8f6",
    "metadata": {},
    "source": [
     "<h3>Preliminary operations: import csv files into MySQL (<code>LOAD DATA</code> statement)</h3>"
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "<h4>Core syntax</h4><br>\n",
-    "As for MySQL, import is performed by a <code>LOAD DATA</code> statement. The file to be imported must be specified after the <code>INFILE</code> keyword, while the table name where the data will be copied must be specified after the <code>INTO TABLE</code> keywords. So, the basic structure of a <code>LOAD DATA</code> statement is as follows:\n",
+    "Import of a csv file in MySQL can be performed by a <code>LOAD DATA</code> statement. The file to be imported must be specified after the <code>INFILE</code> keyword, while the table name where the data will be copied must be specified after the <code>INTO TABLE</code> keywords. So, the basic structure of a <code>LOAD DATA</code> statement is as follows:\n",
     "<br>\n",
     "<code>\n",
     "    LOAD DATA\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "a57380e6",
+   "id": "a72dc6c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ad35e8",
+   "id": "f8e7c456",
    "metadata": {},
    "source": [
     "<h4>\n",
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce27a70",
+   "id": "cf01c6f3",
    "metadata": {},
    "source": [
     "Notice that, after having executed the query, the result must be accessed in some way (by looping over the cursor object or fetching the result itself) before running a new query on the same object. Performing the query execution again before freeing up memory would result in an <code>InternalError</code> throwing the message: <i>Unread result found</i>. As a complement of that, after the memory used by the object result is freed, the result cannot be accessed any longer."
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "e05802fa",
+   "id": "019bce89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c916e5",
+   "id": "be40c416",
    "metadata": {},
    "source": [
     "<h4>\n",
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "023e5eca",
+   "id": "cae11cd7",
    "metadata": {
     "scrolled": false
    },
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "22254c52",
+   "id": "5b0a897c",
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "feed192c",
+   "id": "721ead34",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "da0f4659",
+   "id": "c6b88314",
    "metadata": {},
    "outputs": [
     {
@@ -2516,7 +2516,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "70ea46b1",
+   "id": "2a45d218",
    "metadata": {},
    "outputs": [
     {
@@ -2538,7 +2538,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "26da7224",
+   "id": "2b97d99c",
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2559,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "70e5a1a3",
+   "id": "6a3ca8df",
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2581,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "a02b42f8",
+   "id": "fac392aa",
    "metadata": {},
    "outputs": [
     {
@@ -3481,7 +3481,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "3aa4f8cf",
+   "id": "2bbcf897",
    "metadata": {},
    "outputs": [
     {
@@ -3503,7 +3503,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "6f3fd98a",
+   "id": "095451ac",
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3523,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "6f0c9eb1",
+   "id": "1c97797a",
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "7f969048",
+   "id": "1bd322a7",
    "metadata": {},
    "outputs": [
     {
@@ -3565,7 +3565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1025e4cf",
+   "id": "3bd592a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3579,7 +3579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23c21738",
+   "id": "6b85da75",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3587,7 +3587,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "117fb867",
+   "id": "d33010c4",
    "metadata": {},
    "outputs": [
     {
@@ -3609,7 +3609,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "26e7473c",
+   "id": "da07e2e4",
    "metadata": {},
    "outputs": [
     {
@@ -4247,7 +4247,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "f767801e",
+   "id": "c62a4e93",
    "metadata": {},
    "outputs": [
     {
@@ -4269,7 +4269,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "5a460f65",
+   "id": "4f3c8958",
    "metadata": {},
    "outputs": [
     {
@@ -4292,7 +4292,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "c88b4b9d",
+   "id": "974d0a4f",
    "metadata": {},
    "outputs": [
     {
@@ -4314,7 +4314,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "ca039ef7",
+   "id": "a3de366c",
    "metadata": {},
    "outputs": [
     {
@@ -4345,7 +4345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b42152c1",
+   "id": "74c9924a",
    "metadata": {},
    "outputs": [],
    "source": []
