Project development: update MySQL draft

--- a/project_development/mysql.ipynb
+++ b/project_development/mysql.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "9d3ea7dd",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 2,
    "id": "601003da",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 3,
    "id": "a72dc6c4",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "a846aa82",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "id": "3d94371a",
    "metadata": {},
    "outputs": [
@@ -4344,8 +4344,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "74c9924a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqlll = 'SELECT courseID, materialID, firstName, lastName FROM smallDB WHERE studentID = 192'\n",
+    "cursor.execute(sqlll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "04f5f11f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14 1007 Zaina Madan\n",
+      "14 1009 Zaina Madan\n",
+      "14 1010 Zaina Madan\n",
+      "14 1011 Zaina Madan\n",
+      "14 1013 Zaina Madan\n",
+      "14 1014 Zaina Madan\n",
+      "14 1015 Zaina Madan\n",
+      "14 1016 Zaina Madan\n",
+      "14 1017 Zaina Madan\n",
+      "14 1018 Zaina Madan\n",
+      "14 1019 Zaina Madan\n",
+      "14 1021 Zaina Madan\n",
+      "14 1023 Zaina Madan\n",
+      "14 1024 Zaina Madan\n",
+      "14 1025 Zaina Madan\n",
+      "14 1027 Zaina Madan\n",
+      "14 1028 Zaina Madan\n",
+      "14 1030 Zaina Madan\n",
+      "14 1031 Zaina Madan\n",
+      "14 1032 Zaina Madan\n",
+      "14 1033 Zaina Madan\n",
+      "14 1034 Zaina Madan\n",
+      "14 1035 Zaina Madan\n",
+      "14 1037 Zaina Madan\n",
+      "14 1039 Zaina Madan\n",
+      "14 1040 Zaina Madan\n",
+      "14 1041 Zaina Madan\n",
+      "14 1042 Zaina Madan\n",
+      "14 1043 Zaina Madan\n",
+      "14 1045 Zaina Madan\n",
+      "14 1047 Zaina Madan\n",
+      "14 1048 Zaina Madan\n",
+      "14 1049 Zaina Madan\n",
+      "14 1051 Zaina Madan\n",
+      "14 1052 Zaina Madan\n",
+      "14 1053 Zaina Madan\n",
+      "14 1054 Zaina Madan\n",
+      "14 1055 Zaina Madan\n",
+      "14 1057 Zaina Madan\n",
+      "14 1059 Zaina Madan\n",
+      "14 1060 Zaina Madan\n",
+      "14 1061 Zaina Madan\n",
+      "14 1062 Zaina Madan\n",
+      "379 27003 Zaina Madan\n",
+      "379 27004 Zaina Madan\n",
+      "379 27005 Zaina Madan\n",
+      "379 27007 Zaina Madan\n",
+      "379 27008 Zaina Madan\n",
+      "379 27009 Zaina Madan\n",
+      "379 27010 Zaina Madan\n",
+      "379 27011 Zaina Madan\n",
+      "379 27013 Zaina Madan\n",
+      "379 27014 Zaina Madan\n",
+      "379 27015 Zaina Madan\n",
+      "379 27016 Zaina Madan\n",
+      "379 27017 Zaina Madan\n",
+      "379 27019 Zaina Madan\n",
+      "379 27020 Zaina Madan\n",
+      "379 27021 Zaina Madan\n",
+      "379 27022 Zaina Madan\n",
+      "379 27023 Zaina Madan\n",
+      "379 27025 Zaina Madan\n",
+      "379 27026 Zaina Madan\n",
+      "379 27028 Zaina Madan\n",
+      "379 27029 Zaina Madan\n",
+      "379 27031 Zaina Madan\n",
+      "379 27032 Zaina Madan\n",
+      "379 27033 Zaina Madan\n",
+      "379 27034 Zaina Madan\n",
+      "379 27035 Zaina Madan\n",
+      "379 27037 Zaina Madan\n",
+      "379 27039 Zaina Madan\n",
+      "379 27041 Zaina Madan\n",
+      "379 27043 Zaina Madan\n",
+      "379 27044 Zaina Madan\n",
+      "379 27045 Zaina Madan\n",
+      "379 27046 Zaina Madan\n",
+      "379 27047 Zaina Madan\n",
+      "379 27049 Zaina Madan\n",
+      "379 27050 Zaina Madan\n",
+      "379 27051 Zaina Madan\n",
+      "379 27052 Zaina Madan\n",
+      "379 27053 Zaina Madan\n",
+      "379 27054 Zaina Madan\n",
+      "379 27055 Zaina Madan\n",
+      "379 27056 Zaina Madan\n",
+      "379 27057 Zaina Madan\n",
+      "379 27058 Zaina Madan\n",
+      "379 27059 Zaina Madan\n",
+      "379 27061 Zaina Madan\n",
+      "379 27062 Zaina Madan\n",
+      "379 27063 Zaina Madan\n",
+      "379 27064 Zaina Madan\n",
+      "379 27065 Zaina Madan\n",
+      "379 27067 Zaina Madan\n",
+      "379 27068 Zaina Madan\n",
+      "379 27069 Zaina Madan\n",
+      "379 27070 Zaina Madan\n",
+      "379 27071 Zaina Madan\n",
+      "309 22016 Zaina Madan\n",
+      "309 22017 Zaina Madan\n",
+      "309 22018 Zaina Madan\n",
+      "309 22019 Zaina Madan\n",
+      "309 22020 Zaina Madan\n",
+      "309 22021 Zaina Madan\n",
+      "309 22022 Zaina Madan\n",
+      "309 22025 Zaina Madan\n",
+      "309 22026 Zaina Madan\n",
+      "309 22027 Zaina Madan\n",
+      "309 22028 Zaina Madan\n",
+      "309 22029 Zaina Madan\n",
+      "309 22030 Zaina Madan\n",
+      "309 22031 Zaina Madan\n",
+      "309 22032 Zaina Madan\n",
+      "309 22033 Zaina Madan\n",
+      "309 22034 Zaina Madan\n",
+      "309 22035 Zaina Madan\n",
+      "309 22037 Zaina Madan\n",
+      "309 22038 Zaina Madan\n",
+      "309 22039 Zaina Madan\n",
+      "309 22040 Zaina Madan\n",
+      "309 22042 Zaina Madan\n",
+      "309 22043 Zaina Madan\n",
+      "309 22045 Zaina Madan\n",
+      "309 22046 Zaina Madan\n",
+      "309 22047 Zaina Madan\n",
+      "309 22048 Zaina Madan\n",
+      "309 22049 Zaina Madan\n",
+      "309 22051 Zaina Madan\n",
+      "309 22052 Zaina Madan\n",
+      "309 22054 Zaina Madan\n",
+      "309 22055 Zaina Madan\n",
+      "309 22056 Zaina Madan\n",
+      "309 22057 Zaina Madan\n",
+      "309 22058 Zaina Madan\n",
+      "309 22059 Zaina Madan\n",
+      "309 22060 Zaina Madan\n",
+      "309 22061 Zaina Madan\n",
+      "309 22062 Zaina Madan\n",
+      "309 22063 Zaina Madan\n",
+      "309 22064 Zaina Madan\n",
+      "309 22065 Zaina Madan\n",
+      "309 22066 Zaina Madan\n",
+      "309 22067 Zaina Madan\n",
+      "309 22068 Zaina Madan\n",
+      "309 22069 Zaina Madan\n",
+      "309 22070 Zaina Madan\n",
+      "309 22071 Zaina Madan\n",
+      "309 22072 Zaina Madan\n",
+      "309 22073 Zaina Madan\n",
+      "309 22074 Zaina Madan\n",
+      "309 22075 Zaina Madan\n",
+      "309 22077 Zaina Madan\n",
+      "309 22078 Zaina Madan\n",
+      "309 22079 Zaina Madan\n",
+      "309 22080 Zaina Madan\n",
+      "309 22081 Zaina Madan\n",
+      "309 22082 Zaina Madan\n",
+      "309 22083 Zaina Madan\n",
+      "309 22084 Zaina Madan\n",
+      "309 22085 Zaina Madan\n",
+      "309 22086 Zaina Madan\n",
+      "309 22087 Zaina Madan\n",
+      "234 16708 Zaina Madan\n",
+      "234 16709 Zaina Madan\n",
+      "234 16710 Zaina Madan\n",
+      "234 16711 Zaina Madan\n",
+      "234 16712 Zaina Madan\n",
+      "234 16713 Zaina Madan\n",
+      "234 16714 Zaina Madan\n",
+      "234 16715 Zaina Madan\n",
+      "234 16717 Zaina Madan\n",
+      "234 16718 Zaina Madan\n",
+      "234 16719 Zaina Madan\n",
+      "234 16720 Zaina Madan\n",
+      "234 16721 Zaina Madan\n",
+      "234 16722 Zaina Madan\n",
+      "234 16723 Zaina Madan\n",
+      "234 16724 Zaina Madan\n",
+      "234 16725 Zaina Madan\n",
+      "234 16726 Zaina Madan\n",
+      "234 16727 Zaina Madan\n",
+      "234 16729 Zaina Madan\n",
+      "234 16730 Zaina Madan\n",
+      "234 16731 Zaina Madan\n",
+      "234 16732 Zaina Madan\n",
+      "234 16733 Zaina Madan\n",
+      "234 16734 Zaina Madan\n",
+      "234 16735 Zaina Madan\n",
+      "234 16736 Zaina Madan\n",
+      "234 16737 Zaina Madan\n",
+      "234 16738 Zaina Madan\n",
+      "234 16739 Zaina Madan\n",
+      "234 16741 Zaina Madan\n",
+      "234 16742 Zaina Madan\n",
+      "234 16743 Zaina Madan\n",
+      "234 16744 Zaina Madan\n",
+      "234 16746 Zaina Madan\n",
+      "234 16747 Zaina Madan\n",
+      "234 16748 Zaina Madan\n",
+      "234 16749 Zaina Madan\n",
+      "234 16750 Zaina Madan\n",
+      "234 16751 Zaina Madan\n",
+      "234 16752 Zaina Madan\n",
+      "234 16753 Zaina Madan\n",
+      "234 16754 Zaina Madan\n",
+      "234 16755 Zaina Madan\n",
+      "234 16757 Zaina Madan\n",
+      "234 16758 Zaina Madan\n",
+      "234 16759 Zaina Madan\n",
+      "234 16760 Zaina Madan\n",
+      "234 16761 Zaina Madan\n",
+      "234 16762 Zaina Madan\n",
+      "234 16763 Zaina Madan\n",
+      "234 16764 Zaina Madan\n",
+      "234 16765 Zaina Madan\n",
+      "234 16766 Zaina Madan\n",
+      "234 16767 Zaina Madan\n",
+      "234 16768 Zaina Madan\n",
+      "234 16769 Zaina Madan\n",
+      "234 16771 Zaina Madan\n",
+      "234 16772 Zaina Madan\n",
+      "222\n"
+     ]
+    }
+   ],
+   "source": [
+    "# query result\n",
+    "counter = 0\n",
+    "for cID, mID, name, surname in cursor:\n",
+    "    counter += 1\n",
+    "    print(cID, mID, name, surname)\n",
+    "print(counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c8c0167",
    "metadata": {},
    "outputs": [],
    "source": []
