Project development: minor updates to MySQL, MongoDB and Cassandra drafts

--- a/project_development/cassandra.ipynb
+++ b/project_development/cassandra.ipynb
@@ -79,10 +79,10 @@
     "<h4>\n",
     "Notes when running Cassandra from a Docker container\n",
     "</h4><br>\n",
-    "In loading the csv file from the local machine, we must take into account the usual feature of Docker virual environments. They come with a file system of their own, so a DBMS run from within a container has access to this file system, not to the local machine file system. Hence, the csv file must be imported into the container via the usual <code>docker cp</code> command.\n",
+    "In loading the csv file from the local machine, we must take into account the usual feature of Docker virtual environments. They come with a file system of their own, so a DBMS run from within a container has access to this file system, not to the local machine file system. Hence, the csv file must be imported into the container via the usual <code>docker cp</code> command.\n",
     "<br>\n",
     "<code>\n",
-    "    docker cp path/mycsvfile container:/path\n",
+    "    docker cp path/mycsvfile.csv container:/path\n",
     "</code>\n",
     "\n",
     "Contrary to what has been specified in the MySQL and MongoDB cases, I run the <code>COPY FROM</code> command from <i>cqlsh</i>, not from a system folder or from a container shell. Also, the file has been copied in the root folder of the container file system, hence I don't need to include a path for the csv file, I just specify its name within single quotes."
