--- a/project_development/mongodb.ipynb
+++ b/project_development/mongodb.ipynb
@@ -72,10 +72,10 @@
     "<h4>\n",
     "Notes when running MongoDB from a Docker container\n",
     "</h4><br>\n",
-    "In loading the csv file from the local machine, we must take into account the usual feature of Docker virual environments. They come with a file system of their own, so a DBMS run from within a container has access to this file system, not to the local machine file system. Hence, the csv file must be imported into the container via the usual <code>docker cp</code> command.\n",
+    "In loading the csv file from the local machine, we must take into account the usual feature of Docker virtual environments. They come with a file system of their own, so a DBMS run from within a container has access to this file system, not to the local machine file system. Hence, the csv file must be imported into the container via the usual <code>docker cp</code> command.\n",
     "<br>\n",
     "<code>\n",
-    "    docker cp path/mycsvfile container:/path\n",
+    "    docker cp path/mycsvfile.csv container:/path\n",
     "</code>\n",
     "\n",
     "As previously pointed out, I just copy the file into the container's root, without specifying a subfolder.<br>Another important occurrence of running MongoDB within a Docker container regards the fact that we must execute the <code>mongoimport</code> tool from the system command line, not from the Mongo shell (<code>mongosh</code>). This means that we must run the <code>mongoimport</code> command as a Docker execution, without entering the container:\n",
