--- a/project_development/mysql.ipynb
+++ b/project_development/mysql.ipynb
@@ -89,7 +89,7 @@
     "A couple of further notes are required when running MySQL within a Docker container. Since a Docker container has its own file system, MySQL cannot access parts of the file system not mounted to the container. In particular, the csv file cannot be loaded by MySQL from outside the container. Hence it has to be copied to the container with the <code>docker cp</code> command. This command allows either to copy a file from the container to the local machine or the reverse (which is what we want here). We need to simply pass the source path and file name and the destination path. In our case it would be:\n",
     "<br>\n",
     "<code>\n",
-    "    docker cp <i>path/mycsvfile</i> <i>container:/path</i>\n",
+    "    docker cp <i>path/mycsvfile.csv</i> <i>container:/path</i>\n",
     "</code>\n",
     "\n",
     "where <i>container</i> is the container name. To put the file in the root folder of the container one can simply type <code><i>container:/</i></code> as destination.\n",
